--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/.DS_Store
 .DS_Store
+.DS_Store
+Assets/.DS_Store
+Assets/Plugins/.DS_Store
+Assets/Plugins/Zenject/.DS_Store
